@@ -1,5 +1,10 @@
 2007-12-19  Matthias Clasen  <mclasen@redhat.com>
 
+	* gunionvolumemonitor.c:
+	* gunixmount.c: Remove C99 comments
+
+2007-12-19  Matthias Clasen  <mclasen@redhat.com>
+
 	* gio.symbols: Add some missing symbols
 
 2007-12-19  Alexander Larsson  <alexl@redhat.com>
